--- a/assets/acecicd-pipeline-deploy.yaml
+++ b/assets/acecicd-pipeline-deploy.yaml
@@ -5,10 +5,10 @@ metadata:
 spec:
   params:
   - name: namespace
-    default: ace
+    default: test-cp4i
     description: name of the namespace to deploy and to build image url
   - name: image_name
-    default: ace-demo
+    default: ace-cicd
     description: name of the image in the registry
   - name: image_tag
     default: '1.0'
