--- a/assets/acecicd-pipeline.yaml
+++ b/assets/acecicd-pipeline.yaml
@@ -10,7 +10,7 @@ spec:
     type: image
   params:
   - name: namespace
-    default: ace
+    default: test-cp4i
     description: namespace used to publish the integration server
   tasks:
   - name: build-image
