--- a/assets/acecicd-task-deploy.yaml
+++ b/assets/acecicd-task-deploy.yaml
@@ -4,7 +4,7 @@ metadata:
   name: task-deploy-aceimg
 spec:
   params:
-    - default: ace
+    - default: test-cp4i
       description: release namespace
       name: namespace
       type: string
@@ -24,7 +24,7 @@ spec:
       default: "true"
       description: enable tracing
     - name: ace_version
-      default: 11.0.0.10-r1
+      default: 11.0.0.11-r1
       description: fully qualified ace version
   resources:
     inputs:
